--- a/app/src/main/res/layout/dialog_add_product.xml
+++ b/app/src/main/res/layout/dialog_add_product.xml
@@ -60,11 +60,10 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="5dp"
                 android:text="Image Error"
-                android:textColor="#DA0000"
+                android:textColor="#FF3636"
                 android:textSize="11sp"
                 android:visibility="gone"
-                android:backgroundTint="@color/white"
-                android:textStyle="bold|italic" />
+                android:fontFamily="@font/urbanist_bold" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/pName"
@@ -102,7 +101,7 @@
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
                 app:helperText="Only Text Allowed!!!"
-                app:startIconDrawable="@drawable/user_fill"
+                app:startIconDrawable="@drawable/description"
                 app:startIconTint="@color/myTheme">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -127,7 +126,7 @@
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
                 app:helperText="Only Number Allowed!!!"
-                app:startIconDrawable="@drawable/user_fill"
+                app:startIconDrawable="@drawable/price"
                 app:startIconTint="@color/myTheme">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -152,7 +151,7 @@
                 app:endIconMode="clear_text"
                 app:errorEnabled="true"
                 app:helperText="Only Number Allowed!!!"
-                app:startIconDrawable="@drawable/user_fill"
+                app:startIconDrawable="@drawable/stock"
                 app:startIconTint="@color/myTheme">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -168,37 +167,28 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/myCard"
                 android:orientation="horizontal"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="-10dp">
+                android:layout_marginTop="20dp">
 
                 <Button
                     android:id="@+id/cancelBtn"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/border_radius"
-                    android:backgroundTint="@color/white"
-                    android:padding="10sp"
                     android:text="Cancel"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
                     android:textColor="@color/myTheme"
-                    android:textSize="15sp" />
+                    android:backgroundTint="@color/white"
+                    style="@style/EcommButton"/>
 
                 <Button
                     android:id="@+id/saveChangesBtn"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_margin="10dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/border_radius"
-                    android:padding="10sp"
                     android:text="Save Changes"
-                    android:textColor="@color/white"
-                    android:textSize="15sp" />
+                    android:layout_marginBottom="10dp"
+                    android:layout_weight="1"
+                    style="@style/EcommButton"/>
+
             </LinearLayout>
 
         </LinearLayout>
