--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -91,12 +91,14 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/notifyBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginHorizontal="25dp"
             android:layout_marginBottom="15dp"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
